# probing-test

./: .gitignore  experiment-plan.md
probing/: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.cn.md  README.md  clippy.toml  conftest.py  pyproject.toml
probing/.cargo/: config.toml
probing/.github/actions/setup-build-env/: action.yml
probing/.github/workflows/: docs.yml  pypi.yml  test.yml
probing/docs/: Makefile  README.md  mkdocs.yml  requirements.txt
probing/docs/overrides/: home.html
probing/docs/src/: api-reference.md  api-reference.zh.md  contributing.md  contributing.zh.md  index.md  index.zh.md  installation.md  installation.zh.md  quickstart.md  quickstart.zh.md  versions.md  versions.zh.md
probing/docs/src/design/: architecture.md  cluster-pulsing.md  cluster-pulsing.zh.md  data-layer.md  data-layer.zh.md  debugging.md  debugging.zh.md  distributed.md  distributed.zh.md  extensibility.md  extensibility.zh.md  federation.md  federation.zh.md  index.md  index.zh.md  modularity.md  modularity.zh.md  nccl-profiler.md  nccl-profiler.zh.md  profiling.md  profiling.zh.md  training-phase.zh.md
probing/docs/src/examples/: index.md  index.zh.md  performance-analysis.md  performance-analysis.zh.md  training-debugging.md  training-debugging.zh.md
probing/docs/src/guide/: concepts.md  concepts.zh.md  debugging.md  debugging.zh.md  index.md  index.zh.md  memory-analysis.zh.md  skills.md  skills.zh.md  sql-analytics.md  sql-analytics.zh.md  troubleshooting.md  troubleshooting.zh.md
probing/docs/src/reference/: env-vars.md  index.md  index.zh.md  skill-format.md  sql-tables.md  sql-tables.zh.md
probing/examples/: README.md  bench_profiler.py  external_table.py  external_table_retirement.py  hooks.py  imagenet.py  imagenet_with_span.py  job_tracker.py  job_tracker_via_init.py  nogil_sleep.pyx  test_probing.py  tracing.py
probing/probing/cli/: Cargo.toml
probing/probing/cli/src/: lib.rs  main.rs  table.rs
probing/probing/core/: Cargo.toml
probing/probing/core/src/: config.rs  diagnostics.rs  lib.rs  runtime.rs  tracing.rs
probing/probing/crates/store/: Cargo.toml
probing/probing/extensions/cc/: Cargo.toml
probing/probing/extensions/gpu/: Cargo.toml
probing/probing/extensions/hccl-profapi/: Cargo.toml
probing/probing/extensions/hccl-shim/: Cargo.toml  README.md
probing/probing/extensions/nccl-profiler/: Cargo.toml  README.md
probing/probing/extensions/nccl-profiler-cdylib/: Cargo.toml
probing/probing/extensions/python/: Cargo.toml  build.rs
probing/probing/macros/src/: lib.rs
probing/probing/macros/tests/: test_macros.rs
probing/probing/memtable/: Cargo.toml  README.md
probing/probing/memtable/benches/: memh_report.rs  memtable_report.rs
probing/probing/memtable/src/: cache.rs  dedup.rs  discover.rs  docs.rs  layout.rs  lib.rs  memtable.rs  raw.rs  refcount.rs  row.rs  schema.rs  writer.rs
probing/probing/server/: API.md  Cargo.toml
probing/probing/server/src/: asset.rs  auth.rs  engine.rs  extensions.rs  lib.rs  memtable_ext.rs  report.rs
probing/python/: probing.pth  probing_hook.py
probing/python/probing/: __init__.py  _entrypoint.py  _skills.README.md  config.py  dev_pth.py  external_table.py  parallel.py  site_hook.py  torchrun_cluster.py  web_assets.py
probing/python/probing/bundled_skills/: README.md
probing/python/probing/bundled_web/: index.html
probing/python/probing/cli/: __main__.py
probing/python/probing/core/: __init__.py  engine.py  table.py
probing/python/probing/ext/: __init__.py  ray.py  torch.py
probing/python/probing/handlers/: __init__.py  pythonext.py  router.py
probing/python/probing/hccl/: __init__.py  __main__.py
probing/python/probing/hooks/: import_hook.py
probing/python/probing/inspect/: __init__.py  torch.py  trace.py
probing/python/probing/libs/: .gitkeep
probing/python/probing/nccl/: __init__.py  __main__.py  mock.py
probing/python/probing/profiling/: __init__.py  phase_tracker.py  torch_probe.py  types.py
probing/python/probing/repl/: __init__.py  debug_magic.py  help_magic.py  inspect_magic.py  query_magic.py  stack_magic.py  torch_magic.py
probing/python/probing/skills/: README.md  __init__.py  __main__.py  install.py  interpret.py  loader.py  paths.py  tools.py
probing/python/probing/testing/: __init__.py
probing/python/probing/tracing/: __init__.py  _bindings.py  backends.py  coordinates.py  hooks.py  phases.py  span.py  table.py
probing/python/probing/utils/: py.py
probing/skills/: catalog.yaml  install.sh
probing/skills/comm_bottleneck/: steps.yaml
probing/skills/gpu_pressure/: SKILL.md
probing/skills/health_overview/: SKILL.md  steps.yaml
probing/skills/memory_leak/: steps.yaml
probing/skills/module_bottleneck/: SKILL.md
probing/skills/nccl_culprit_victim/: SKILL.md
probing/skills/semantic/: tables.yaml
probing/skills/slow_rank/: SKILL.md  steps.yaml
probing/skills/training_hang/: SKILL.md
probing/src/: lib.rs
probing/tests/: README.md  conftest.py
probing/tests/regression/: conftest.py
probing/tests/regression/core/: test_config.py  test_engine.py  test_global_federation.py  test_init.py  test_table_docs.py  test_table_docs_integration.py  test_torchrun_cluster.py
probing/tests/regression/ext/: test_collective_autostart.py  test_comm_collective.py  test_parallel_topology.py  test_phase_tracker.py  test_python_tracer.py  test_step_context.py  test_tracing_span.py
probing/tests/regression/inspect/: test_trace_helpers.py
probing/tests/regression/nccl/: test_nccl_mock.py  test_nccl_plugin_path.py  test_nccl_skill.py
probing/tests/regression/profiling/: test_torch_probe_sampling.py
probing/tests/regression/repl/: __init__.py  test_help_magic.py  test_query_magic.py
probing/tests/regression/rust/: Cargo.toml  build.rs
probing/tests/regression/skills/: test_install_tools.py
probing/tests/unit/: conftest.py
probing/web/: Cargo.toml  DESIGN.md  Dioxus.toml  index.html  tailwind.config.js  tailwind.css
probing/web/assets/: tailwind.css
probing/web/src/: app.rs  main.rs
probing/web/src/api/: cpu.rs  (+14 more)
(+355 files in other folders)
