[project]
name = "probing"
version = "0.2.5"
description = "Dynamic Performance Profiler for Distributed AI"
readme = "README.md"
authors = [
    { name = "reiase", email = "reiase@gmail.com" }
]
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
requires-python = ">=3.7"
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

keywords = ["debug", "performance", "profiling", "ai", "distributed", "monitoring"]

[project.urls]
Homepage = "https://github.com/reiase/probing"
Repository = "https://github.com/reiase/probing"
Documentation = "https://github.com/reiase/probing"
Issues = "https://github.com/reiase/probing/issues"

[project.scripts]
probing = "probing.cli.__main__:main"

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
test = [
    "pytest>=8.0; python_version >= '3.8'",
    "pytest<8.0; python_version < '3.8'",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "pyyaml>=6",
    "ipython>=8.0",
    "ipykernel>=6.0",
]
dev = [
    "pytest>=8.0; python_version >= '3.8'",
    "pytest<8.0; python_version < '3.8'",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "pyyaml>=6",
    "ipython>=8.0",
    "ipykernel>=6.0",
    "ruff>=0.1.0",
    "black>=24.0; python_version >= '3.8'",
    "black<24.0; python_version < '3.8'",
    "maturin>=1.0,<2.0",
]

[tool.maturin]
module-name = "probing._core"
manifest-path = "Cargo.toml"
python-source = "python"
compatibility = "linux"
bindings = "pyo3"
cargo-extra-args = "--features extension-module,gpu,kmsg"
include = [
    "probing.pth",
    "probing_hook.py",
    "probing/libs/*",
    "probing/bundled_skills/**",
    "probing/bundled_web/**",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests/unit", "tests/regression"]
pythonpath = ["python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--color=yes",
    "--durations=10",
    "--showlocals",
    "--strict-markers",
    "--doctest-modules",
    "--ignore=python/probing/cli/__main__.py",
]
norecursedirs = [
    ".git",
    ".tox",
    ".venv",
    "venv",
    "env",
    "dist",
    "build",
    "__pycache__",
    "rust",
]
markers = [
    "integration: marks tests that require integration resources",
    "slow: marks tests that are expected to be slow",
    "unit: marks tests that can run in isolation",
    "regression: contract, e2e, and cross-module tests",
    "training_observability: training iteration / collective observability tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:pandas.*",
    "ignore::DeprecationWarning:numpy.*",
    "error::RuntimeWarning",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "E402", "F841", "E731", "F401", "E722", "N806", "N801", "N802", "N803"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E722"]
"tests/*" = ["F841"]

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'
