[package]
name = "probing-memtable"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-describing columnar memory table with ring buffer"


[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }
memmap2 = "0.9"
libc = "0.2"
pco = "0.4"

[dev-dependencies]

[[bench]]
name = "memtable_report"
harness = false

[[bench]]
name = "memh_report"
harness = false
