[package]
name = "probing-cc"
description = "C/C++ support for probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true


[features]
default = ["kmsg"]
kmsg = ["dep:rmesg"]

[dependencies]
probing-core = { path = "../../core" }
probing-memtable = { path = "../../memtable" }

anyhow = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }

async-trait = "0.1.83"
rmesg = { version = "1.0.21", optional = true }
datafusion = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17.0", default-features = false, features = ["chrono"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
