[package]
name = "probing-hccl-profapi"
description = "libprofapi.so cdylib — same sources as probing-hccl-shim, Linux HCCL dlopen name"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "profapi"
crate-type = ["cdylib"]
path = "../hccl-shim/src/lib.rs"

[dependencies]
probing-memtable = { path = "../../memtable" }

once_cell = { workspace = true }
parking_lot = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
