[package]
name = "probing-hccl-shim"
description = "libprofapi.so shim for HCCL — captures Msprof events into hccl.* memtables"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# rlib for workspace linking (probing-core schema docs, unit tests).
name = "probing_hccl_shim"
crate-type = ["rlib"]

[dependencies]
probing-memtable = { path = "../../memtable" }

once_cell = { workspace = true }
parking_lot = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
