[package]
name = "probing-nccl-profiler"
description = "NCCL profiler plugin (v3) — writes nccl.* memtables for probing SQL"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true


[lib]
# rlib for workspace linking; cdylib plugin is probing-nccl-profiler-cdylib.
crate-type = ["rlib"]

[dependencies]
probing-memtable = { path = "../../memtable" }

once_cell = { workspace = true }
parking_lot = "0.12"
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
