[package]
name = "probing-python"
description = "Python support for probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true


[features]
extension-module = ["pyo3/extension-module"]
tracing = []
default = ["extension-module", "tracing"]

[dependencies]
probing-cc = { path = "../cc" }
probing-core = { path = "../../core" }
probing-memtable = { path = "../../memtable" }
probing-proto = { path = "../../proto" }
probing-store = { path = "../../crates/store" }
probing-cli = { path = "../../cli" }

anyhow = { workspace = true }
ctor = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
html-escape = "0.2"

include_dir = "=0.7.4"
backtrace = { version = "0.3", features = ["cpp_demangle", "std"] }
cpp_demangle = "0.5.1"
rustc-demangle = "0.1.27"
pyo3 = { version = "0.29.0", default-features = false, features = [
    "abi3",
    "abi3-py310",
    # "extension-module",
    "auto-initialize",
    "macros"
] }
# NOTE: the `pprof` crate was removed intentionally. Its in-signal libunwind
# sampling crashed PyTorch processes (see features/pprof.rs). CPU sampling now
# uses our own SIGPROF handler that only snapshots raw stack pointers, with all
# symbolization done off the signal path on a consumer thread.
lazy_static = "1.4.0"
async-trait = "0.1.83"
signal-hook-registry = "1.4.2"
regex = ">=1.6.0"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.8"

[build-dependencies]
pyo3-build-config = "0.29.0"
